[project]
name = "telerecon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorama>=0.4.6",
    "cryptg>=0.5.0.post0",
    "datetime>=5.5",
    "folium>=0.19.7",
    "matplotlib>=3.10.3",
    "networkx>=3.5",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "pytz>=2025.2",
    "reportlab>=4.4.1",
    "spacy>=3.8.7",
    "telethon>=1.40.0",
    "tzlocal>=5.3.1",
    "validate-email-address>=1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "mypy>=1.16.0",
    "pyright>=1.1.401",
    "ruff>=0.11.12",
]
